<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/menu_item_settings">

    <!-- reserved: SMB params-->
    <EditTextPreference
        android:defaultValue="@string/preference_server_ip_address_default_value"
        android:key="server_ip_address"
        android:persistent="true"
        android:summary="@string/preference_server_ip_address_summary"
        android:title="@string/preference_server_ip_address_title"
        android:visibility="gone" />

    <EditTextPreference
        android:defaultValue="@string/preference_server_domain_default_value"
        android:key="server_domain"
        android:persistent="true"
        android:summary="@string/preference_server_domain_summary"
        android:title="@string/preference_server_domain_title"
        android:visibility="gone" />

    <EditTextPreference
        android:defaultValue="@string/preference_server_username_default_value"
        android:key="server_username"
        android:persistent="true"
        android:summary="@string/preference_server_username_summary"
        android:title="@string/preference_server_username_title"
        android:visibility="gone" />

    <EditTextPreference
        android:defaultValue="@string/preference_server_password_default_value"
        android:inputType="textPassword"
        android:key="server_password"
        android:persistent="true"
        android:summary="@string/preference_server_password_summary"
        android:title="@string/preference_server_password_title"
        android:visibility="gone" />

    <!-- FTP params -->
    <EditTextPreference
        android:defaultValue="@string/preference_ftp_server_ip_address_default_value"
        android:key="ftp_server_address"
        android:persistent="true"
        android:summary="@string/preference_server_ip_address_summary"
        android:title="@string/preference_server_ip_address_title" />

    <EditTextPreference
        android:defaultValue="@string/preference_ftp_server_port_default_value"
        android:key="ftp_server_port"
        android:persistent="true"
        android:summary="@string/preference_ftp_server_port_summary"
        android:title="@string/preference_ftp_server_port_title" />

    <EditTextPreference
        android:defaultValue="@string/preference_ftp_server_username_default_value"
        android:key="ftp_server_username"
        android:persistent="true"
        android:summary="@string/preference_server_username_summary"
        android:title="@string/preference_server_username_title" />

    <EditTextPreference
        android:defaultValue="@string/preference_ftp_server_password_default_value"
        android:inputType="textPassword"
        android:key="ftp_server_password"
        android:persistent="true"
        android:summary="@string/preference_server_password_summary"
        android:title="@string/preference_server_password_title" />

</PreferenceScreen>
