<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/menu_item_settings">

    <EditTextPreference
        android:defaultValue="@string/preference_monitor_mode_time_default_value"
        android:inputType="textPhonetic"
        android:key="monitor_mode_time"
        android:persistent="true"
        android:summary="@string/preference_monitor_mode_time_summary"
        android:title="@string/preference_monitor_mode_time_title" />

    <EditTextPreference
        android:defaultValue="@string/preference_monitor_mode_noise_default_value"
        android:inputType="textPhonetic"
        android:key="monitor_mode_db"
        android:persistent="true"
        android:summary="@string/preference_monitor_mode_noise_summary"
        android:title="@string/preference_monitor_mode_noise_title" />
</PreferenceScreen>
