<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flatui="http://schemas.android.com/apk/res/com.wistron.demo.tool.teddybear.parent_side"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/list_profiles"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/list_selector_background_focused" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.wistron.demo.tool.teddybear.parent_side.view.FlatButton
                android:id="@+id/create_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:text="@string/btn_create_profile"
                flatui:fl_blockButtonEffectHeight="3dp" />

            <com.wistron.demo.tool.teddybear.parent_side.view.FlatButton
                android:id="@+id/reset_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:text="@string/btn_reset_profile"
                flatui:fl_blockButtonEffectHeight="3dp" />

            <com.wistron.demo.tool.teddybear.parent_side.view.FlatButton
                android:id="@+id/delete_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:text="@string/btn_delete_profile"
                flatui:fl_blockButtonEffectHeight="3dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.wistron.demo.tool.teddybear.parent_side.view.FlatButton
            android:id="@+id/enroll_speaker_btn_start_recording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/btn_start_record_touch_down"
            flatui:fl_blockButtonEffectHeight="3dp" />

        <com.wistron.demo.tool.teddybear.parent_side.view.FlatButton
            android:id="@+id/enroll_speaker_btn_stop_recording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/btn_title_stop_recording"
            android:visibility="gone"
            flatui:fl_blockButtonEffectHeight="3dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/record_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="0"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_selector_background_focused"
        android:gravity="center"
        android:text="@string/speaker_recognition_sample_text"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/show_warning_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speaker_recognition_sample_text_tips" />

    <EditText
        android:id="@+id/enroll_speaker_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/list_selector_background_focused"
        android:focusable="false"
        android:gravity="center" />

    <!-- Bob add for test -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/get_all_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_get_all_profile"
                android:visibility="gone" />


        </LinearLayout>

        <EditText
            android:id="@+id/profile_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/list_selector_background_focused"
            android:focusable="false"
            android:focusableInTouchMode="false" />
    </LinearLayout>
</LinearLayout>
