<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wistron.demo.tool.teddybear.parent_side.ChildrenManagementActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/children_management_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/children_management_no_child_warning"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/children_management_no_child_warning"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="50sp"
            android:textStyle="bold" />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@drawable/layout_divider"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <Button
            android:id="@+id/children_mm_btn_sync_from_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_title_sync_from_server"
            android:textSize="25sp" />

        <Button
            android:id="@+id/children_mm_btn_sync_to_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/btn_title_sync_to_server"
            android:textColor="#0f0"
            android:textSize="25sp" />
    </RelativeLayout>
</LinearLayout>
